# ModCust

./: Cargo.toml  array2d.ts  async-solver.ts  index.html  index.tsx  package.json  solver.ts  tsconfig.json  webpack.config.js  worker.ts
.github/workflows/: deploy.yml
data/: bn3.json  bn5.json  bn6.json
js/: async-solver.ts  bn4.json  index.tsx  solver.ts  worker.ts
src/: lib.rs  solver.rs
static/: index.html
