[package]
name = "fullcust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true

[dependencies]
wasm-bindgen = "0.2"
log = "0.4"
wasm-log = "0.3"
anyhow = "1"
ndarray = "0.15"
genawaiter = "0.99"
thiserror = "1"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.4"
instant = { version = "0.1", features = ["stdweb", "wasm-bindgen"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.2"
futures = "0.1.27"
wasm-bindgen-futures = "0.3"
assert_matches = "1"
